[gd_scene load_steps=3 format=3 uid="uid://dulvd8qirkpdg"]

[ext_resource type="Script" uid="uid://bge1phrp7abj0" path="res://Scripts/menu_manager.gd" id="1_4h8cu"]
[ext_resource type="PackedScene" uid="uid://dxvcapvd6vdla" path="res://Scenes/SettingsWindow.tscn" id="2_rmr4d"]

[node name="MenuManager" type="CanvasLayer"]
layer = 3
script = ExtResource("1_4h8cu")

[node name="TitleMenu" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="TitleMenu"]
layout_mode = 2
text = "New Game"

[node name="SettingsButton" type="Button" parent="TitleMenu"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="TitleMenu"]
layout_mode = 2
text = "Exit"

[node name="DifficultyMenu" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -77.0
offset_right = 72.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="DifficultyMenu"]
layout_mode = 2
text = "Choose a Difficulty
"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="EasyButton" type="Button" parent="DifficultyMenu"]
layout_mode = 2
text = "Easy"
metadata/_edit_lock_ = true

[node name="NormalButton" type="Button" parent="DifficultyMenu"]
layout_mode = 2
text = "Normal"
metadata/_edit_lock_ = true

[node name="HardButton" type="Button" parent="DifficultyMenu"]
layout_mode = 2
text = "Hard"
metadata/_edit_lock_ = true

[node name="ReadyMenu" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -42.0
offset_right = 54.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ReadyMenu"]
layout_mode = 2
text = "Level is Ready
"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="StartingLabel" type="Label" parent="ReadyMenu"]
layout_mode = 2
text = "Starting in 3..."
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="StartButton" type="Button" parent="ReadyMenu"]
layout_mode = 2
text = "Start Now!"
metadata/_edit_lock_ = true

[node name="SettingsWindow" parent="." instance=ExtResource("2_rmr4d")]
visible = false
offset_top = -140.0
offset_bottom = 140.0

[connection signal="pressed" from="TitleMenu/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="TitleMenu/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="TitleMenu/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="DifficultyMenu/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="DifficultyMenu/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="DifficultyMenu/HardButton" to="." method="_on_HardButton_pressed"]
[connection signal="pressed" from="ReadyMenu/StartButton" to="." method="_on_StartButton_pressed"]
